--- a/src/components/CustomDateInputs/styles.scss
+++ b/src/components/CustomDateInputs/styles.scss
@@ -1,32 +1,34 @@
 @use "../../styles/styles-utils.scss" as *;
 
-$spacing-xs: pxToRem(4px);
-$spacing-sm: pxToRem(8px);
+:root {
+  --sdp-custom-input-spacing-xs: #{pxToRem(4px)};
+  --sdp-custom-input-spacing-sm: #{pxToRem(8px)};
+}
 
 .CustomDateInput {
   display: flex;
   flex-direction: column;
-  gap: $spacing-xs;
+  gap: var(--sdp-custom-input-spacing-xs);
   width: 100%;
 
   &__formatted {
     color: var(--sds-clr-gray-07);
     font-style: italic;
     margin: 0;
-    padding-left: $spacing-sm;
+    padding-left: var(--sdp-custom-input-spacing-sm);
   }
 }
 
 .CustomYearMonthInput {
   display: flex;
   flex-direction: column;
-  gap: $spacing-xs;
+  gap: var(--sdp-custom-input-spacing-xs);
   width: 100%;
 
   &__formatted {
     color: var(--sds-clr-gray-07);
     font-style: italic;
     margin: 0;
-    padding-left: $spacing-sm;
+    padding-left: var(--sdp-custom-input-spacing-sm);
   }
 }
