--- a/src/components/ApiKeyUpdateModal/styles.scss
+++ b/src/components/ApiKeyUpdateModal/styles.scss
@@ -1,6 +1,16 @@
 @use "../../styles/styles-utils.scss" as *;
 
+// Layout constants
+$modal-max-height: 70vh;
+
 .EditApiKeyModal {
+  // LAYOUT & STRUCTURE
+  &__content {
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: $modal-max-height;
+  }
+
   &__description {
     color: var(--sds-clr-gray-09);
     margin-bottom: pxToRem(24px);
