SDP-1879: Add ignore memo tracing note for embedded wallets (#360)
### What

Add a note to memo tracing setting on frontend

<img width="721" height="225" alt="Screenshot 2025-10-11 at 9 40 19 AM"
src="https://github.com/user-attachments/assets/34fd99f5-bac9-4e4b-a8d0-a213d202718b"
/>


### Why

 Memo tracing is ignored for embedded wallets.
 Wording confirmed with Tori
 
### Known limitations

N/A

### Checklist

- [x] Title follows `SDP-1234: Add new feature` or `Chore: Refactor
package xyz` format. The Jira ticket code was included if available.
- [x] PR has a focused scope and doesn't mix features with refactoring
- [ ] `CHANGELOG.md` is updated (if applicable)
- [ ] Preview deployment works as expected
- [ ] CONFIG/SECRETS changes are updated in helmcharts and deployments
(if applicable)
- [ ] Ready for production

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -99,6 +99,15 @@ body {
   }
 }
 
+.Note__emphasis {
+  display: block;
+  font-size: pxToRem(12px);
+  line-height: pxToRem(18px);
+  font-weight: 500;
+  color: var(--sds-clr-gray-10);
+  letter-spacing: 0.01em;
+}
+
 .Table-v2__cell--secondary {
   color: var(--sds-clr-gray-09);
 }
