--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -97,6 +97,15 @@ body {
   &--noMargin {
     margin-top: 0;
   }
+
+  &__emphasis {
+    display: block;
+    font-size: pxToRem(12px);
+    line-height: pxToRem(18px);
+    font-weight: 500;
+    color: var(--sds-clr-gray-10);
+    letter-spacing: 0.01em;
+  }
 }
 
 .Table-v2__cell--secondary {
