fix profile modal

--- a/src/components/EmbeddedWalletProfileDropdown/styles.scss
+++ b/src/components/EmbeddedWalletProfileDropdown/styles.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   align-items: center;
   gap: pxToRem(4px);
-  padding: pxToRem(6px) pxToRem(14px);
+  padding: pxToRem(6px) 0;
   border: 1px solid transparent;
   border-radius: 999px;
   background-color: var(--sds-clr-gray-01);
