--- a/src/components/EmbeddedWalletProfileModal/styles.scss
+++ b/src/components/EmbeddedWalletProfileModal/styles.scss
@@ -3,24 +3,21 @@
 .EmbeddedWalletProfileModal__content {
   display: flex;
   flex-direction: column;
-  gap: pxToRem(24px);
-  padding: pxToRem(20px);
+  gap: pxToRem(20px);
 }
 
 .EmbeddedWalletProfileModal__title {
-  margin: 0;
   text-align: center;
   font-size: pxToRem(20px);
   font-weight: var(--sds-fw-medium);
-  color: var(--sds-clr-gray-13, #000000);
+  color: var(--sds-clr-gray-12);
 }
 
+
 .EmbeddedWalletProfileModal__contact {
-  margin: 0;
   font-size: pxToRem(16px);
   text-align: center;
   color: var(--sds-clr-gray-09);
-  margin-bottom: pxToRem(16px);
 }
 
 .EmbeddedWalletProfileModal__field {
@@ -42,7 +39,6 @@
 .EmbeddedWalletProfileModal__copyText {
   flex: 1;
   margin: 0;
-  padding: pxToRem(12px) 0;
   font-size: pxToRem(18px);
   color: var(--sds-clr-gray-12);
   word-break: break-word;
