--- a/src/components/EmbeddedWalletModal/styles.scss
+++ b/src/components/EmbeddedWalletModal/styles.scss
@@ -27,7 +27,7 @@
     padding: var(--EmbeddedWalletModal-padding);
     border-radius: var(--EmbeddedWalletModal-radius);
     box-shadow: var(--EmbeddedWalletModal-shadow);
-    background-color: var(--sds-clr-gray-01);
+    background-color: var(--sds-clr-gray-02);
     border: 1px solid var(--sds-clr-gray-06);
     z-index: calc(var(--sds-z-index-modal) + 1);
     animation: embedded-wallet-modal-pop 180ms cubic-bezier(0.22, 1, 0.36, 1) 120ms both;
@@ -72,6 +72,7 @@
   &[data-align="center"] {
     align-items: center;
     text-align: center;
+    width: 100%;
   }
 
   &[data-align="left"] {
@@ -118,6 +119,31 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes embedded-wallet-modal-slide-up {
+  0% {
+    opacity: 0;
+    transform: translate(0, 16px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@media (max-width: 480px) {
+  .EmbeddedWalletModal__container[data-align="bottom"] {
+    top: auto;
+    bottom: 0;
+    left: 0;
+    transform: translate(0, 0);
+    width: 100%;
+    max-width: 100%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    animation: embedded-wallet-modal-slide-up 200ms cubic-bezier(0.22, 1, 0.36, 1) 60ms both;
   }
 }
 
