--- a/src/components/EmbeddedWalletBalanceCard/styles.scss
+++ b/src/components/EmbeddedWalletBalanceCard/styles.scss
@@ -1,19 +1,14 @@
 @use "../../styles/styles-utils.scss" as *;
 
-.EmbeddedWalletCard {
-  display: flex;
-  flex-direction: column;
-  gap: pxToRem(16px);
-
+.EmbeddedWalletBalanceCard {
   &__title {
     font-size: pxToRem(14px);
     color: var(--sds-clr-gray-09);
     font-weight: var(--sds-fw-medium);
+    margin: 0;
   }
 
   &__tableHeader {
-    display: flex;
-    justify-content: space-between;
     font-size: pxToRem(12px);
     color: var(--sds-clr-gray-09);
   }
@@ -21,30 +16,6 @@
   &__divider {
     height: 1px;
     background: var(--sds-clr-gray-06);
-  }
-
-  &__table {
-    display: flex;
-    flex-direction: column;
-    gap: pxToRem(16px);
-  }
-
-  &__row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__asset {
-    display: flex;
-    align-items: center;
-    gap: pxToRem(12px);
-  }
-
-  &__assetText {
-    display: flex;
-    flex-direction: column;
-    gap: pxToRem(4px);
   }
 
   &__assetLogo {
