--- a/src/components/EmbeddedWalletDismissibleNotice/styles.scss
+++ b/src/components/EmbeddedWalletDismissibleNotice/styles.scss
@@ -1,11 +1,13 @@
 @use "../../styles/styles-utils.scss" as *;
 
-.EmbeddedWalletDismissibleNotice__content {
-  display: flex;
-  flex-direction: column;
-  gap: pxToRem(12px);
-}
+.EmbeddedWalletDismissibleNotice {
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: pxToRem(12px);
+  }
 
-.EmbeddedWalletDismissibleNotice__dismiss {
-  align-self: flex-start;
+  &__dismiss {
+    align-self: flex-start;
+  }
 }
