--- a/src/components/EmbeddedWalletBalanceCard/styles.scss
+++ b/src/components/EmbeddedWalletBalanceCard/styles.scss
@@ -20,8 +20,10 @@
 
   &__assetLogo {
     height: pxToRem(32px);
+    width: pxToRem(32px);
     object-fit: contain;
     border-radius: 50%;
+    flex-shrink: 0;
   }
 
   &__assetCode {
